# rust-axum-author-book-management-system

./: .env  Cargo.toml
src/: config.rs  db.rs  main.rs
src/assets/: ProjectStructure.MD
src/models/: authors.rs  mod.rs
src/routes/: authors.rs
